<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/rank_layout"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rank_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tv_left_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_right_label1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_left1"
            android:textSize="16sp"
            android:text="@string/left_label1"/>

        <TextView
            android:id="@+id/tv_right_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_left_label1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_left1"
            android:textSize="16sp"
            android:text="@string/right_label1"/>

        <TextView
            android:id="@+id/tv_left1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_left_label1"
            app:layout_constraintEnd_toEndOf="@id/tv_left_label1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_left_label2"
            android:textSize="22sp"
            android:text="@string/tl1"
            />

        <TextView
            android:id="@+id/tv_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_right_label1"
            app:layout_constraintEnd_toEndOf="@id/tv_right_label1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_left_label2"
            android:drawablePadding="3dp"
            android:textSize="22sp"
            android:text="@string/tr1"
            />

        <TextView
            android:id="@+id/tv_left_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_right_label2"
            app:layout_constraintBottom_toTopOf="@id/tv_left2"
            android:textSize="16sp"
            android:text="@string/left_label2"
            />

        <TextView
            android:id="@+id/tv_right_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_left_label2"
            app:layout_constraintBottom_toTopOf="@id/tv_left2"
            android:textSize="16sp"
            android:text="@string/right_label2"
            />

        <TextView
            android:id="@+id/tv_left2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_left_label2"
            app:layout_constraintEnd_toEndOf="@id/tv_left_label2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="22sp"
            android:text="@string/tl2"
            />

        <TextView
            android:id="@+id/tv_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_right_label2"
            app:layout_constraintEnd_toEndOf="@id/tv_right_label2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="22sp"
            android:text="@string/tr2"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>