<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/id_et_layout"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/logo_icon"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/pw_et_layout"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:theme="@style/MyEdittext"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pw_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/remenber_layout"
        android:layout_marginHorizontal="25dp"

        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pw_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:textSize="15sp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:theme="@style/MyEdittext"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/remenber_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/pw_et_layout"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/remember_cb"
            android:textSize="12sp"
            android:text="@string/remenber_pw"
            />

        <CheckBox
            android:id="@+id/remember_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_bg"
        android:textSize="15sp"
        android:text="@string/login"
        android:textColor="#fff"
        android:elevation="10dp"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name"
        android:background="@drawable/rainbow"/>


</android.support.constraint.ConstraintLayout>